fix: removed scrollbars in glossar

--- a/frontend/src/app/glossary/components/glossary-list/glossary-list.component.scss
+++ b/frontend/src/app/glossary/components/glossary-list/glossary-list.component.scss
@@ -36,3 +36,6 @@
 
     }
 }
+.glossary-list::-webkit-scrollbar {
+    display: none;
+  }
