--- a/frontend/src/app/proposal/components/proposal-overview-filter/proposal-overview-filter.component.scss
+++ b/frontend/src/app/proposal/components/proposal-overview-filter/proposal-overview-filter.component.scss
@@ -2,7 +2,7 @@
     position: fixed;
     top: 200px;
     left: 0;
-    width: 120px;
+    width: 100px;
 
     transition: width 0.5s ease-in-out;
     &--active {
