--- a/frontend/src/app/shared/components/header/header.component.scss
+++ b/frontend/src/app/shared/components/header/header.component.scss
@@ -16,7 +16,7 @@ $header-height: 70px;
   &__logo {
     display: flex;
     align-items: center;
-
+    color: #000000;
     gap: 20px;
     &__img {
       width: 70px;
